--- a/Hadamard from Walsh Spectrum.ipynb
+++ b/Hadamard from Walsh Spectrum.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "25f9edf3",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "76699dd8",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "24262d50",
    "metadata": {},
    "outputs": [],
@@ -68,18 +68,18 @@
     "            if(np.linalg.matrix_rank(data)<two_pow_k):\n",
     "                print(f'Rank ({np.linalg.matrix_rank(data)}) of data is not large enough. Generating again.')\n",
     "            else:\n",
-    "                print(f'Rank is {np.linalg.matrix_rank(data)}')\n",
+    "                print(f'Data generated. Rank = {np.linalg.matrix_rank(data)}')\n",
     "                break           \n",
     "    else:\n",
     "        # A maximum of 2^2^4 samples are generated (with samples) for any k>4\n",
     "        data = [[1.0 if random.random()>0.5 else -1.0 for i in range(two_pow_k)] for i in range(min(n, pow(2, pow(2, 4))))]\n",
-    "    print(\"Data generated.\")    \n",
+    "        print(\"Data generated.\")\n",
     "    return data            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "8f16e7d2",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "c4d0a81d",
    "metadata": {},
    "outputs": [],
@@ -141,24 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "b7fb4523",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def test_network(model, data, n):\n",
-    "#     test_samples = torch.tensor([[float(el) for el in row] for row in torch.randint(0, 2, (n, self.inputDim)).to(self.device)])\n",
-    "    test_samples = torch.tensor(data[:-n])    \n",
-    "    preds = model(test_samples)\n",
-    "    true_spectra = torch.matmul(test_samples, Had(len(data[0])))\n",
-    "    print(\"Test:\")\n",
-    "    for i in range(n):\n",
-    "        print(true_spectra[i], \"\\n\", preds[i], \"\\n\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "d58e7650",
    "metadata": {},
    "outputs": [
@@ -166,13 +149,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 16 65536\n"
+      "3 8 256\n"
      ]
     }
    ],
    "source": [
     "# Please change the number of variables (k) in the Boolean function here\n",
-    "k = 4\n",
+    "k = 3\n",
     "two_pow_k = pow(2, k)\n",
     "n = pow(2, two_pow_k)\n",
     "\n",
@@ -181,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "213b9777",
    "metadata": {},
    "outputs": [
@@ -189,59 +172,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rank is 16\n",
-      "Data generated.\n",
-      "No. of epochs = 0, no. of steps = 330\n",
+      "Data generated. Rank = 8\n",
+      "No. of epochs = 26, no. of steps = 212\n",
       "Final weight matrix: \n",
-      " tensor([[ 1.0180,  1.0035,  0.9981,  0.9993,  1.0078,  1.0050,  1.0045,  0.9967,\n",
-      "          1.0112,  1.0077,  1.0043,  1.0070,  0.9925,  1.0076,  0.9989,  0.9987],\n",
-      "        [ 1.0007, -0.9995,  1.0001, -1.0004,  1.0002, -0.9996,  1.0003, -1.0000,\n",
-      "          0.9995, -0.9993,  1.0005, -0.9995,  1.0005, -0.9987,  1.0003, -1.0002],\n",
-      "        [ 1.0011,  1.0000, -1.0001, -0.9997,  1.0008,  1.0002, -0.9997, -0.9999,\n",
-      "          1.0009,  0.9999, -0.9998, -1.0000,  0.9985,  0.9999, -1.0004, -0.9999],\n",
-      "        [ 1.0063, -0.9987, -1.0005,  0.9997,  1.0029, -0.9981, -0.9984,  0.9991,\n",
-      "          1.0034, -0.9974, -0.9983,  1.0023,  0.9972, -0.9969, -1.0004,  0.9996],\n",
-      "        [ 1.0082,  1.0013,  0.9989,  1.0000, -0.9966, -0.9981, -0.9980, -1.0019,\n",
-      "          1.0064,  1.0033,  1.0017,  1.0034, -1.0037, -0.9978, -1.0009, -1.0006],\n",
-      "        [ 1.0028, -0.9996,  0.9997, -1.0000, -0.9982,  1.0012, -0.9994,  1.0002,\n",
-      "          1.0011, -0.9992,  1.0007, -0.9996, -1.0022,  1.0016, -1.0003,  1.0000],\n",
-      "        [ 0.9970,  0.9996, -0.9997, -1.0001, -1.0019, -1.0010,  0.9993,  1.0000,\n",
-      "          0.9985,  0.9994, -1.0007, -1.0005, -0.9976, -1.0012,  1.0004,  1.0000],\n",
-      "        [ 0.9903, -1.0018, -0.9991,  1.0002, -1.0044,  0.9973,  0.9976, -0.9985,\n",
-      "          0.9945, -1.0037, -1.0024,  0.9966, -0.9954,  0.9958,  1.0006, -0.9996],\n",
-      "        [ 0.9944,  0.9987,  1.0006,  1.0005,  0.9976,  0.9982,  0.9986,  1.0010,\n",
-      "         -1.0031, -1.0028, -1.0014, -1.0023, -0.9982, -1.0030, -0.9999, -0.9995],\n",
-      "        [ 0.9907, -1.0018,  1.0009, -0.9998,  0.9962, -1.0023,  0.9977, -0.9980,\n",
-      "         -1.0061,  0.9961, -1.0022,  0.9962, -0.9963,  0.9965, -0.9994,  1.0006],\n",
-      "        [ 0.9969,  0.9993, -0.9999, -0.9999,  0.9979,  0.9985, -1.0007, -1.0005,\n",
-      "         -1.0002, -1.0008,  0.9990,  0.9998, -0.9978, -1.0026,  1.0000,  0.9999],\n",
-      "        [ 1.0014, -1.0003, -1.0006,  1.0004,  1.0006, -1.0001, -0.9997,  0.9993,\n",
-      "         -0.9972,  1.0002,  0.9998, -0.9994, -1.0014,  0.9987,  0.9993, -1.0001],\n",
-      "        [ 1.0009,  1.0002,  0.9998,  0.9998, -0.9999, -0.9999, -0.9998, -1.0005,\n",
-      "         -0.9990, -0.9992, -0.9998, -0.9992,  1.0002,  1.0003,  1.0000,  0.9998],\n",
-      "        [ 0.9955, -1.0008,  1.0003, -1.0002, -1.0021,  0.9992, -1.0012,  1.0008,\n",
-      "         -1.0030,  0.9987, -1.0011,  0.9983,  1.0025, -1.0012,  1.0006, -0.9999],\n",
-      "        [ 0.9993,  0.9995, -1.0000, -0.9995, -0.9997, -1.0001,  0.9997,  1.0006,\n",
-      "         -1.0002, -1.0011,  0.9996,  0.9990,  0.9988,  0.9991, -1.0004, -0.9997],\n",
-      "        [ 0.9955, -1.0004, -0.9992,  0.9998, -1.0021,  0.9989,  0.9990, -0.9991,\n",
-      "         -1.0040,  0.9985,  0.9993, -1.0015,  1.0028, -1.0008, -0.9993,  1.0003]],\n",
+      " tensor([[ 1.0003,  0.9998,  1.0013,  0.9972,  1.0018,  0.9985,  0.9995,  0.9999],\n",
+      "        [ 0.9986, -0.9990,  0.9940, -0.9867,  0.9911, -0.9929,  1.0025, -0.9995],\n",
+      "        [ 0.9996,  1.0003, -1.0019, -0.9959,  0.9972,  1.0022, -0.9992, -0.9999],\n",
+      "        [ 1.0000, -1.0000, -1.0001,  1.0002,  0.9998, -0.9999, -0.9999,  1.0000],\n",
+      "        [ 1.0003,  0.9998,  1.0011,  0.9976, -0.9984, -1.0013, -1.0004, -1.0001],\n",
+      "        [ 0.9997, -0.9998,  0.9986, -0.9968, -1.0022,  1.0017, -0.9994,  1.0001],\n",
+      "        [ 1.0000,  1.0000, -0.9999, -1.0002, -0.9998, -1.0001,  0.9999,  1.0000],\n",
+      "        [ 1.0011, -1.0008, -0.9955,  0.9900, -0.9933,  0.9947,  0.9982, -1.0004]],\n",
       "       grad_fn=<PermuteBackward0>)\n",
-      "Average number of epochs = 0.0, steps = 330.0.\n",
-      "Network converged well enough only 1 times out of 10\n"
+      "Data generated. Rank = 8\n",
+      "No. of epochs = 16, no. of steps = 129\n",
+      "Final weight matrix: \n",
+      " tensor([[ 1.0006,  0.9995,  1.0009,  1.0001,  1.0011,  0.9996,  0.9995,  1.0002],\n",
+      "        [ 1.0003, -0.9981,  0.9990, -1.0023,  1.0022, -1.0011,  0.9998, -0.9978],\n",
+      "        [ 1.0012,  0.9943, -0.9946, -0.9945,  0.9981,  1.0022, -1.0020, -1.0034],\n",
+      "        [ 1.0011, -1.0011, -0.9983,  1.0025,  1.0008, -1.0000, -0.9995,  0.9983],\n",
+      "        [ 0.9993,  1.0053,  0.9947,  0.9952, -0.9969, -1.0023, -0.9992, -0.9974],\n",
+      "        [ 0.9987, -0.9959,  0.9966, -1.0065, -0.9976,  0.9984, -0.9989,  1.0030],\n",
+      "        [ 1.0010,  0.9920, -0.9928, -0.9935, -1.0038, -0.9964,  0.9989,  0.9957],\n",
+      "        [ 0.9996, -0.9978, -1.0039,  0.9989, -1.0002,  0.9989,  1.0005, -0.9987]],\n",
+      "       grad_fn=<PermuteBackward0>)\n",
+      "Data generated. Rank = 8\n",
+      "No. of epochs = 27, no. of steps = 220\n",
+      "Final weight matrix: \n",
+      " tensor([[ 0.9996,  0.9988,  0.9980,  0.9977,  1.0016,  0.9990,  1.0023,  1.0001],\n",
+      "        [ 1.0011, -0.9969,  1.0053, -0.9939,  0.9957, -0.9975,  0.9938, -1.0004],\n",
+      "        [ 1.0001,  1.0004, -0.9993, -0.9991,  0.9994,  1.0004, -1.0008, -1.0000],\n",
+      "        [ 1.0000, -0.9999, -0.9998,  1.0002,  0.9998, -0.9999, -1.0002,  1.0000],\n",
+      "        [ 0.9986,  0.9961,  0.9932,  0.9921, -0.9945, -1.0033, -0.9921, -0.9995],\n",
+      "        [ 0.9989, -1.0031,  0.9946, -1.0063, -0.9956,  0.9974, -0.9937,  1.0004],\n",
+      "        [ 1.0007,  1.0020, -0.9965, -0.9959, -1.0028, -0.9983,  0.9959,  0.9997],\n",
+      "        [ 0.9997, -1.0009, -1.0016,  0.9982, -0.9987,  0.9992,  1.0018, -0.9999]],\n",
+      "       grad_fn=<PermuteBackward0>)\n",
+      "Average number of epochs = 23.0, steps = 187.0.\n"
      ]
     }
    ],
    "source": [
-    "##### Additional inputs may not be required to change.\n",
-    "learningRate = 4\n",
+    "# Additional inputs may not be required to change.\n",
+    "learningRate = 0.1\n",
     "batchSize = two_pow_k\n",
-    "numberOfInputs = n//4\n",
+    "numberOfInputs = 1*n//4      # change to vary the fraction of function space used for training (default at 1/4th)\n",
     "max_epochs = 500\n",
     "\n",
     "device = torch.device('cpu')\n",
     "eps, steps = [], []\n",
     "model = None\n",
-    "for i in range(1):\n",
+    "for i in range(3):\n",
     "    data = generate_data(k, numberOfInputs)\n",
     "    model =  NetworkModel(k)\n",
     "    optimizer = optim.SGD(model.parameters(), lr=learningRate, momentum=0.9)\n",
@@ -253,26 +234,25 @@
     "        steps.append(n_steps)\n",
     "if(len(eps)!=0):\n",
     "    print(f\"Average number of epochs = {sum(eps)/len(eps)}, steps = {sum(steps)/len(steps)}.\")\n",
-    "    if(len(eps)<10):\n",
-    "        print(f\"Network converged well enough only {len(eps)} times out of 10\")\n",
+    "    if(len(eps)<3):\n",
+    "        print(f\"Network converged well enough only {len(eps)} times out of 3\")\n",
     "else:\n",
-    "    print(\"Network did not converge well\")\n",
-    "# test_network(model, data, 3)"
+    "    print(\"Network did not converge well\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "29b32b34",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(5.)"
+       "tensor(2.)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +260,8 @@
    "source": [
     "# Predict the non-linearity by passing the processed Boolean function of the form (-1)^f\n",
     "\n",
-    "model.predict(torch.tensor([1.0, -1.0, 1, 1, -1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1,-1]))"
+    "bf = torch.tensor([1.0, -1.0, 1.0, 1.0, -1.0, -1.0, 1.0, -1.0])\n",
+    "model.predict(bf)"
    ]
   }
  ],
