end to end nl added

--- a/Hadamard from Walsh Spectrum.ipynb
+++ b/Hadamard from Walsh Spectrum.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "25f9edf3",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "76699dd8",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "24262d50",
    "metadata": {},
    "outputs": [],
@@ -64,6 +64,7 @@
     "        while(True):\n",
     "            perm = torch.randperm(pow(2, two_pow_k))[:n]\n",
     "            data = [[0.0]*(two_pow_k-len(bin(num)[2:]))+[float(i) for i in bin(num)[2:]] for num in perm]\n",
+    "            # replacing f with (-1)^f\n",
     "            data = [[1.0 if el==0.0 else -1.0 for el in bool_fun] for bool_fun in data]\n",
     "            if(np.linalg.matrix_rank(data)<two_pow_k):\n",
     "                print(f'Rank ({np.linalg.matrix_rank(data)}) of data is not large enough. Generating again.')\n",
@@ -72,14 +73,14 @@
     "                break           \n",
     "    else:\n",
     "        # A maximum of 2^2^4 samples are generated (with samples) for any k>4\n",
-    "        data = [[1.0 if random.random()>0.5 else -1.0 for i in range(two_pow_k)] for i in range(min(n, pow(2, pow(2, 4))))]\n",
+    "        data = [[1.0 if random.random()>0.5 else -1.0 for i in range(two_pow_k)] for i in range(n)]\n",
     "        print(\"Data generated.\")\n",
     "    return data            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "8f16e7d2",
    "metadata": {},
    "outputs": [],
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "c4d0a81d",
    "metadata": {},
    "outputs": [],
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "d58e7650",
    "metadata": {},
    "outputs": [
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "213b9777",
    "metadata": {},
    "outputs": [
@@ -173,42 +174,17 @@
      "output_type": "stream",
      "text": [
       "Data generated. Rank = 8\n",
-      "No. of epochs = 26, no. of steps = 212\n",
+      "No. of epochs = 31, no. of steps = 249\n",
       "Final weight matrix: \n",
-      " tensor([[ 1.0003,  0.9998,  1.0013,  0.9972,  1.0018,  0.9985,  0.9995,  0.9999],\n",
-      "        [ 0.9986, -0.9990,  0.9940, -0.9867,  0.9911, -0.9929,  1.0025, -0.9995],\n",
-      "        [ 0.9996,  1.0003, -1.0019, -0.9959,  0.9972,  1.0022, -0.9992, -0.9999],\n",
-      "        [ 1.0000, -1.0000, -1.0001,  1.0002,  0.9998, -0.9999, -0.9999,  1.0000],\n",
-      "        [ 1.0003,  0.9998,  1.0011,  0.9976, -0.9984, -1.0013, -1.0004, -1.0001],\n",
-      "        [ 0.9997, -0.9998,  0.9986, -0.9968, -1.0022,  1.0017, -0.9994,  1.0001],\n",
-      "        [ 1.0000,  1.0000, -0.9999, -1.0002, -0.9998, -1.0001,  0.9999,  1.0000],\n",
-      "        [ 1.0011, -1.0008, -0.9955,  0.9900, -0.9933,  0.9947,  0.9982, -1.0004]],\n",
-      "       grad_fn=<PermuteBackward0>)\n",
-      "Data generated. Rank = 8\n",
-      "No. of epochs = 16, no. of steps = 129\n",
-      "Final weight matrix: \n",
-      " tensor([[ 1.0006,  0.9995,  1.0009,  1.0001,  1.0011,  0.9996,  0.9995,  1.0002],\n",
-      "        [ 1.0003, -0.9981,  0.9990, -1.0023,  1.0022, -1.0011,  0.9998, -0.9978],\n",
-      "        [ 1.0012,  0.9943, -0.9946, -0.9945,  0.9981,  1.0022, -1.0020, -1.0034],\n",
-      "        [ 1.0011, -1.0011, -0.9983,  1.0025,  1.0008, -1.0000, -0.9995,  0.9983],\n",
-      "        [ 0.9993,  1.0053,  0.9947,  0.9952, -0.9969, -1.0023, -0.9992, -0.9974],\n",
-      "        [ 0.9987, -0.9959,  0.9966, -1.0065, -0.9976,  0.9984, -0.9989,  1.0030],\n",
-      "        [ 1.0010,  0.9920, -0.9928, -0.9935, -1.0038, -0.9964,  0.9989,  0.9957],\n",
-      "        [ 0.9996, -0.9978, -1.0039,  0.9989, -1.0002,  0.9989,  1.0005, -0.9987]],\n",
-      "       grad_fn=<PermuteBackward0>)\n",
-      "Data generated. Rank = 8\n",
-      "No. of epochs = 27, no. of steps = 220\n",
-      "Final weight matrix: \n",
-      " tensor([[ 0.9996,  0.9988,  0.9980,  0.9977,  1.0016,  0.9990,  1.0023,  1.0001],\n",
-      "        [ 1.0011, -0.9969,  1.0053, -0.9939,  0.9957, -0.9975,  0.9938, -1.0004],\n",
-      "        [ 1.0001,  1.0004, -0.9993, -0.9991,  0.9994,  1.0004, -1.0008, -1.0000],\n",
-      "        [ 1.0000, -0.9999, -0.9998,  1.0002,  0.9998, -0.9999, -1.0002,  1.0000],\n",
-      "        [ 0.9986,  0.9961,  0.9932,  0.9921, -0.9945, -1.0033, -0.9921, -0.9995],\n",
-      "        [ 0.9989, -1.0031,  0.9946, -1.0063, -0.9956,  0.9974, -0.9937,  1.0004],\n",
-      "        [ 1.0007,  1.0020, -0.9965, -0.9959, -1.0028, -0.9983,  0.9959,  0.9997],\n",
-      "        [ 0.9997, -1.0009, -1.0016,  0.9982, -0.9987,  0.9992,  1.0018, -0.9999]],\n",
-      "       grad_fn=<PermuteBackward0>)\n",
-      "Average number of epochs = 23.0, steps = 187.0.\n"
+      " tensor([[ 0.9901,  0.9947,  0.9951,  1.0020,  0.9922,  0.9959,  0.9934,  1.0031],\n",
+      "        [ 0.9914, -1.0046,  0.9957, -0.9982,  0.9932, -1.0036,  0.9942, -0.9973],\n",
+      "        [ 0.9951,  0.9974, -1.0024, -0.9990,  0.9962,  0.9980, -1.0033, -0.9985],\n",
+      "        [ 1.0032, -0.9983, -0.9984,  0.9993,  1.0026, -0.9987, -0.9978,  0.9990],\n",
+      "        [ 0.9987,  0.9993,  0.9994,  1.0003, -1.0010, -1.0005, -1.0009, -0.9996],\n",
+      "        [ 1.0003, -0.9998,  1.0002, -1.0001, -0.9997,  1.0001, -0.9998,  0.9999],\n",
+      "        [ 0.9989,  0.9994, -1.0006, -0.9998, -1.0009, -1.0005,  0.9992,  1.0003],\n",
+      "        [ 0.9983, -1.0009, -1.0008,  1.0003, -1.0013,  0.9993,  0.9989, -0.9995]],\n",
+      "       grad_fn=<PermuteBackward0>)\n"
      ]
     }
    ],
@@ -220,29 +196,18 @@
     "max_epochs = 500\n",
     "\n",
     "device = torch.device('cpu')\n",
-    "eps, steps = [], []\n",
     "model = None\n",
-    "for i in range(3):\n",
-    "    data = generate_data(k, numberOfInputs)\n",
-    "    model =  NetworkModel(k)\n",
-    "    optimizer = optim.SGD(model.parameters(), lr=learningRate, momentum=0.9)\n",
-    "    n_ep, n_steps = train_network(model, data, numberOfInputs, learningRate, batchSize, max_epochs, device, optimizer)\n",
-    "    weightMatrix = OrderedDict(model.named_parameters())['lin1.weight'].T\n",
-    "    print(\"Final weight matrix: \\n\", weightMatrix)\n",
-    "    if(n_ep!=-1):\n",
-    "        eps.append(n_ep)\n",
-    "        steps.append(n_steps)\n",
-    "if(len(eps)!=0):\n",
-    "    print(f\"Average number of epochs = {sum(eps)/len(eps)}, steps = {sum(steps)/len(steps)}.\")\n",
-    "    if(len(eps)<3):\n",
-    "        print(f\"Network converged well enough only {len(eps)} times out of 3\")\n",
-    "else:\n",
-    "    print(\"Network did not converge well\")"
+    "data = generate_data(k, numberOfInputs)\n",
+    "model =  NetworkModel(k)\n",
+    "optimizer = optim.SGD(model.parameters(), lr=learningRate, momentum=0.9)\n",
+    "n_ep, n_steps = train_network(model, data, numberOfInputs, learningRate, batchSize, max_epochs, device, optimizer)\n",
+    "weightMatrix = OrderedDict(model.named_parameters())['lin1.weight'].T\n",
+    "print(\"Final weight matrix: \\n\", weightMatrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "29b32b34",
    "metadata": {},
    "outputs": [
@@ -252,7 +217,7 @@
        "tensor(2.)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
